--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Take my cup</title>
-</head>
-<body>
 
-    <div class="center">
-        <h1>Coming soon...</h1>
-    </div>
+    <script async src="https://www.googletagmanager.com/gtag/js"></script>
 
-    <style>
+    <style media="screen">
         .center {
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 100%;
+            height: 100%;
         }
+        .wrapper {
+            width: 100vw;
+            height: 100vh;
+        }
+        body {margin: 0; padding: 0;}
     </style>
+</head>
+
+<body>
+    <div class="wrapper">
+        <div class="center">
+            <h1>Coming soon...</h1>
+        </div>
+    </div>
 </body>
+
 </html>
