add media for header

--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,11 @@
         padding: 0 16px;
       }
     }
+    @media screen and (max-width: 425px) {
+      .header__content {
+        flex-direction: column;
+      }
+    }
   </style>
 </head>
 
