change  content data

--- a/public/index.html
+++ b/public/index.html
@@ -211,13 +211,13 @@
     },
     ru: {
       headerContent: 'Все твои мечты будут приготовлены',
-      comingSoon: 'Скоро открытие...',
+      comingSoon: 'Совсем скоро...',
       language: 'Язык сайта',
       copyright: '© 2020 Takemycup. Все права защищены.'
     },
     ukr: {
       headerContent: 'Всі твої мрії будуть проготовлені',
-      comingSoon: 'Незабаром відкриття...',
+      comingSoon: 'Незабаром...',
       language: 'Мова сайту',
       copyright: '© 2020 Takemycup. Всі права захищені.'
     }
