--- a/public/index.html
+++ b/public/index.html
@@ -257,9 +257,9 @@
 
       const newTime = {
         days: transformToTwoDigits(Math.floor(+timer/1000/60/60/24)),
-        hour: transformToTwoDigits(Math.floor(+timer/1000/60/60)),
-        min: transformToTwoDigits(Math.floor(+timer/1000/60)),
-        sec: transformToTwoDigits(Math.floor(+timer/1000))
+        hour: transformToTwoDigits(Math.floor(+timer/1000/60/60%24)),
+        min: transformToTwoDigits(Math.floor(+timer/1000/60%60)),
+        sec: transformToTwoDigits(Math.floor(+timer/1000%60))
       }
       empty && empty.remove();
       timerView.innerText = `[${newTime.days}:${newTime.hour}:${newTime.min}:${newTime.sec}]`;
